Make sure msgmerge is only run when necessary.

--- a/po/Makefile
+++ b/po/Makefile
@@ -28,6 +28,7 @@ tekka.pot: $(GLADEH)
 
 %.po: tekka.pot
 	if test -f $@; then \
+		touch $@; \
 		msgmerge --update $@ $<; \
 	else \
 		msginit --input=$< --output=$@; \
