Strip GTK translations.

--- a/po/Makefile
+++ b/po/Makefile
@@ -19,7 +19,8 @@ clean:
 	$(RM) *.po~
 
 $(GLADEH): %.h: %
-	$(QUIET_GEN) intltool-extract --type=gettext/glade $+
+	$(QUIET_GEN) intltool-extract --type=gettext/glade $+; \
+	$(SED) -i '/^char \*s = N_("gtk-.*");$$/d' $@
 
 tekka.pot: $(PY) $(GLADEH)
 	$(QUIET_GEN) xgettext --keyword=_ --keyword=N_ --output=$@ $+
