Use correct icon.

--- a/tekka.desktop.in
+++ b/tekka.desktop.in
@@ -3,7 +3,7 @@ Name=tekka IRC Client
 GenericName=IRC Client
 Comment=Chat on IRC
 Exec=@bindir@/tekka
-Icon=tekka
+Icon=@sharedir@/sushi/tekka/graphics/icon.svg
 StartupNotify=true
 Terminal=false
 Type=Application
