Update tekka.pot only when necessary.

--- a/Makefile.common
+++ b/Makefile.common
@@ -13,10 +13,13 @@ GREP       = grep
 GZIP       = gzip
 INSTALL    = install
 LN         = ln
+MSGCMP     = msgcmp
+MV         = mv
 PKG_CONFIG = pkg-config
 RM         = rm
 SED        = sed
 SORT       = sort
+TOUCH      = touch
 
 ifndef VERBOSE
 	QUIET_GEN = @echo "[GEN]  $@";
