--- a/Makefile.common
+++ b/Makefile.common
@@ -9,11 +9,11 @@ localedir = $(sharedir)/locale
 mandir    = $(sharedir)/man
 
 CHMOD      = chmod
+DIFF       = diff
 GREP       = grep
 GZIP       = gzip
 INSTALL    = install
 LN         = ln
-MSGCMP     = msgcmp
 MV         = mv
 PKG_CONFIG = pkg-config
 RM         = rm
