--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,21 +1,27 @@
-commands.py
-com.py
-dialogs/channelList.py
-dialogs/dcc.py
-dialogs/debug.py
-dialogs/plugins.py
-dialogs/whois.py
-lib/dcc_dialog.py
-lib/dialog_control.py
-lib/key_dialog.py
-lib/plugin_control.py
-lib/status_icon.py
-lib/topic_dialog.py
-lib/welcome_window.py
-main.py
-menus/nicklist_menu.py
-menus/servertree_menu.py
-signals.py
+signal_handler.py
+tekka/com.py
+tekka/commands.py
+tekka/dialogs/addServer.py
+tekka/dialogs/channelList.py
+tekka/dialogs/dcc.py
+tekka/dialogs/debug.py
+tekka/dialogs/plugins.py
+tekka/dialogs/server.py
+tekka/dialogs/whois.py
+tekka/gui/gui_control.py
+tekka/gui/mgmt.py
+tekka/lib/dcc_dialog.py
+tekka/lib/dialog_control.py
+tekka/lib/general_output_buffer.py
+tekka/lib/key_dialog.py
+tekka/lib/plugin_control.py
+tekka/lib/status_icon.py
+tekka/lib/topic_dialog.py
+tekka/lib/welcome_window.py
+tekka/main.py
+tekka/menus/mainmenu_context.py
+tekka/menus/nicklist_menu.py
+tekka/menus/servertree_menu.py
 
 glade/dialogs/about.glade.in
 glade/dialogs/advancedPreferences.glade
@@ -26,8 +32,10 @@ glade/dialogs/hide.glade
 glade/dialogs/history.glade
 glade/dialogs/plugins.glade
 glade/dialogs/preferences.glade
+glade/dialogs/server.glade
 glade/dialogs/serverAdd.glade
 glade/dialogs/serverDelete.glade
 glade/dialogs/serverEdit.glade
-glade/dialogs/server.glade
 glade/mainwindow.glade
+glade/menus/nickListMenu.ui
+glade/menus/serverTreeMenu.ui
