--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,15 +5,15 @@ tekka/dialogs/addServer.py
 tekka/dialogs/channelList.py
 tekka/dialogs/dcc.py
 tekka/dialogs/debug.py
+tekka/dialogs/history.py
 tekka/dialogs/plugins.py
 tekka/dialogs/server.py
 tekka/dialogs/whois.py
-tekka/gui/gui_control.py
 tekka/gui/mgmt.py
 tekka/lib/dcc_dialog.py
-tekka/lib/dialog_control.py
 tekka/lib/general_output_buffer.py
 tekka/lib/key_dialog.py
+tekka/lib/plugin_config_dialog.py
 tekka/lib/plugin_control.py
 tekka/lib/status_icon.py
 tekka/lib/topic_dialog.py
@@ -23,20 +23,19 @@ tekka/menus/mainmenu_context.py
 tekka/menus/nicklist_menu.py
 tekka/menus/servertree_menu.py
 
-glade/dialogs/about.glade.in
-glade/dialogs/advancedPreferences.glade
-glade/dialogs/channelList.glade
-[type: gettext/glade] glade/dialogs/colorTable.ui
-glade/dialogs/dcc.glade
-glade/dialogs/hide.glade
-glade/dialogs/history.glade
-[type: gettext/glade] glade/dialogs/join.ui
-glade/dialogs/plugins.glade
-glade/dialogs/preferences.glade
-glade/dialogs/server.glade
-glade/dialogs/serverAdd.glade
-glade/dialogs/serverDelete.glade
-glade/dialogs/serverEdit.glade
-glade/mainwindow.glade
-[type: gettext/glade] glade/menus/nickListMenu.ui
-[type: gettext/glade] glade/menus/serverTreeMenu.ui
+[type: gettext/glade] ui/dialogs/about.ui.in
+[type: gettext/glade] ui/dialogs/advancedPreferences.ui
+[type: gettext/glade] ui/dialogs/channelList.ui
+[type: gettext/glade] ui/dialogs/colorTable.ui
+[type: gettext/glade] ui/dialogs/dcc.ui
+[type: gettext/glade] ui/dialogs/hide.ui
+[type: gettext/glade] ui/dialogs/join.ui
+[type: gettext/glade] ui/dialogs/plugins.ui
+[type: gettext/glade] ui/dialogs/preferences.ui
+[type: gettext/glade] ui/dialogs/server.ui
+[type: gettext/glade] ui/dialogs/serverAdd.ui
+[type: gettext/glade] ui/dialogs/serverDelete.ui
+[type: gettext/glade] ui/dialogs/serverEdit.ui
+[type: gettext/glade] ui/main_window.ui
+[type: gettext/glade] ui/menus/nickListMenu.ui
+[type: gettext/glade] ui/menus/serverTreeMenu.ui
