Added new icons, renamed color icon
TODO: Install icons to /usr/share/icons/*/apps/

--- a/ui/dialogs/about.ui.in
+++ b/ui/dialogs/about.ui.in
@@ -7,7 +7,7 @@
     <property name="title">About tekka</property>
     <property name="resizable">False</property>
     <property name="window_position">center-on-parent</property>
-    <property name="icon">../../graphics/icon.svg</property>
+    <property name="icon">../../graphics/tekka.svg</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="program_name">tekka</property>
@@ -47,7 +47,7 @@ Marian Tietz</property>
 Marian Tietz</property>
     <property name="translator_credits" translatable="yes">translator-credits</property>
     <property name="artists">Marian Tietz</property>
-    <property name="logo">../../graphics/icon.svg</property>
+    <property name="logo">../../graphics/tekka.svg</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox8">
         <property name="visible">True</property>
