--- a/tekka.desktop.in
+++ b/tekka.desktop.in
@@ -3,7 +3,7 @@ Name=tekka IRC Client
 GenericName=IRC Client
 Comment=Chat on IRC
 Exec=@BINDIR@/tekka
-Icon=@DATAROOTDIR@/sushi/tekka/graphics/icon.svg
+Icon=tekka
 StartupNotify=true
 Terminal=false
 Type=Application
