--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,4 +1,5 @@
 signal_handler.py
+sushi.py
 tekka/com.py
 tekka/commands.py
 tekka/dialogs/addServer.py
@@ -14,7 +15,7 @@ tekka/lib/dcc_dialog.py
 tekka/lib/general_output_buffer.py
 tekka/lib/key_dialog.py
 tekka/lib/plugin_config_dialog.py
-tekka/lib/plugin_control.py
+tekka/lib/spell_entry.py
 tekka/lib/status_icon.py
 tekka/lib/topic_dialog.py
 tekka/lib/welcome_window.py
