--- a/tekka.py.in
+++ b/tekka.py.in
@@ -26,6 +26,15 @@ OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGE.
 """
 
+SUSHI_VERSION = "@SUSHI_VERSION@"
+
+import argparse
+
+parser = argparse.ArgumentParser(description='sushi IRC suite GUI client.')
+parser.add_argument('-v', '--version', action='version', version=SUSHI_VERSION)
+
+args = parser.parse_args()
+
 import tekka.main
 import signal_handler
 import command_handler
@@ -37,4 +46,4 @@ tekka.main.setup()
 signal_handler.setup()
 command_handler.setup()
 
-tekka.main.main()
+tekka.main.main(args)
